# ------------------------------------------------------------
# This file is the main CMakeLists of memtool of headcode.space
#
# The 'LICENSE.txt' file in the project root holds the software license.
# Copyright (C) 2020 headcode.space
# https://www.headcode.space, <info@headcode.space>
# ------------------------------------------------------------

# ------------------------------------------------------------ 
# Workload

add_subdirectory(benchmark)
add_subdirectory(integration)
add_subdirectory(unit)
